# sentinelFi

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  SUBMISSION.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/analyze/[address]/: page.tsx
app/api/agent/: route.ts
app/api/analyze/: route.ts
app/api/watch/: route.ts
app/api/x402/pay/: route.ts
app/app/: page.tsx
app/app/chat/: page.tsx
app/app/history/: page.tsx
app/app/policy/: page.tsx
app/app/scan/: page.tsx
app/bulk/: page.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
app/history/: page.tsx
app/watch/: page.tsx
components/: loading-overlay.tsx  logo.tsx  nav.tsx  results-card.tsx  wallet-connect.tsx
lib/: agent.ts  audit.ts  claude.ts  flagged-addresses.ts  risk.ts  solana.ts  types.ts  x402.ts
programs/sentinelfi/action_ledger/: Cargo.toml
programs/sentinelfi/action_ledger/src/: lib.rs
programs/sentinelfi/agent_policy/: Cargo.toml
programs/sentinelfi/agent_policy/src/: lib.rs
programs/sentinelfi/vault_router/: Cargo.toml
programs/sentinelfi/vault_router/src/: lib.rs
programs/sentinelfi/verdict_registry/: Cargo.toml
programs/sentinelfi/verdict_registry/src/: lib.rs
programs/walletguard/: Cargo.toml
programs/walletguard/src/: action_ledger.rs  agent_policy.rs  lib.rs  vault_router.rs
sdk/: package.json
sdk/src/: analyze.ts  bulk.ts  index.ts  types.ts  watch.ts
tests/: walletguard.ts
