[package]
name = "walletguard"
version = "0.1.0"
description = "WalletGuard AI Verdict Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "walletguard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
