[package]
name = "vault_router"
version = "0.1.0"
description = "SentinelFi Vault Router program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
