[package]
name = "verdict_registry"
version = "0.1.0"
description = "SentinelFi Verdict Registry program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verdict_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
